# IsotopeFitLib

./: Dev Env Setup Instructions  README.md  isotopefit_install.sh
IsotopeFitLib/: CMakeLists.txt  HDF5Func.cpp  HDF5Func.h
IsotopeFitLib/include/: HDF5Func.h  IsotopeFitLib.h  MatBinFunc.h  fitting.h  ifdfile.h  ifl.h  ifl_data.h  ifl_dataprocessing.h  ifl_h5file.h  ifl_ifdfile.h
IsotopeFitLib/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
IsotopeFitLib/src/: MatBinFunc.cpp  fitting.cpp  ifdfile.cpp  ifl_data.cpp  ifl_dataprocessing.cpp  ifl_h5file.cpp  ifl_ifdfile.cpp
IsotopeFitLib/storage/: HDF5Func.cpp  MatBinFunc.cpp  MatBinFunc.h
IsotopeFitter/: CMakeLists.txt  IsotopeFitter.cpp  IsotopeFitter.h  bgdata  massoffsetdata  out.txt  resfit
IsotopeFitter/include/: DebugUtils.h  DesignMatrix.h  IsotopeFitter.h  LeastSquares.h
IsotopeFitter/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
IsotopeFitter/src/: DebugUtils.cpp  DesignMatrix.cpp  IsotopeFitter.cpp  IsotopeFitter.h  LeastSquares.cpp
IsotopeFitter/storage/: MatBin.cpp  Snippets.cpp  h5openread.cpp  workingisfit
IsotopeFitter/tests/: MatBin.cpp  fittingtest.cpp  fittingtest2.cpp  gsltest.cpp  h5openread.cpp  h5readatt.cpp  hue.ifd  matiotest.cpp  qrfittingdemo.cpp  realtest.ifd  realtest2.ifd  testfileifd.ifd  testfileifd2.ifd
LibCaller2/: LibCaller2.VC.VC.opendb  (+1 more)
(+172 files in other folders)
